Code review comments, plus capture doc gen test output.